--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "@react-navigation/native": "^7.0.14",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-image-crop-picker": "^0.42.0",
+    "react-native-permissions": "^5.2.5",
+    "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
-    "react-native-screens": "^4.5.0"
+    "react-native-screens": "^4.5.0",
+    "react-native-svg": "^15.11.1",
+    "react-native-vision-camera": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
