--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.0.14",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-device-info": "^14.0.4",
     "react-native-image-crop-picker": "^0.42.0",
     "react-native-permissions": "^5.2.5",
     "react-native-reanimated": "^3.16.7",
