--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "lucide-react": "^0.486.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-device-info": "^14.0.4",
     "react-native-image-crop-picker": "^0.42.0",
+    "react-native-paper": "^5.13.1",
     "react-native-permissions": "^5.2.5",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-svg": "^15.11.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-vision-camera": "^4.6.3"
   },
   "devDependencies": {
