--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native": "^7.1.5",
+    "@react-navigation/native-stack": "^7.3.9",
+    "@react-navigation/stack": "^7.2.9",
     "lucide-react": "^0.486.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-device-info": "^14.0.4",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-image-crop-picker": "^0.42.0",
     "react-native-paper": "^5.13.1",
     "react-native-permissions": "^5.2.5",
     "react-native-reanimated": "^3.16.7",
-    "react-native-safe-area-context": "^5.1.0",
-    "react-native-screens": "^4.5.0",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-vision-camera": "^4.6.3"
