--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.1.5",
-    "@react-navigation/native-stack": "^7.3.9",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-picker/picker": "^2.11.0",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/drawer": "^7.3.9",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.9",
+    "axios": "^1.9.0",
     "lucide-react": "^0.486.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-image-crop-picker": "^0.42.0",
+    "react-native-image-picker": "^8.2.0",
     "react-native-paper": "^5.13.1",
     "react-native-permissions": "^5.2.5",
-    "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated": "^3.17.3",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.1",
